tests/javacresults/fail_no_semicolon.txt
Intermediate.java:1: class, interface, or enum expected
Fatal error: exception Parsing.Parse_error
^
1 error
